# surface_ai

./: Cargo.toml  README.md
src/: classification.rs  classifier.rs  common.rs  lib.rs  neuron.rs  test_methods.rs
src/neural_net/: housing_prices_test.rs  layer.rs  mod.rs  softmax.rs  tests.rs
src/perceptron/: helpers.rs  mod.rs  neuron.rs  tests.rs
